--- a/BigProject/Base.lproj/LaunchScreen.storyboard
+++ b/BigProject/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,24 +17,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="cardstack.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="EEV-oi-sGF">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardstack.png" translatesAutoresizingMaskIntoConstraints="NO" id="EEV-oi-sGF">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <animations/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Study It!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R1D-IA-ADX">
-                                <rect key="frame" x="20" y="222" width="560" height="156"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Study It!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R1D-IA-ADX">
+                                <rect key="frame" x="119" y="147" width="362" height="99"/>
                                 <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="131"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="99" id="TaV-dz-6cO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="96"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <size key="shadowOffset" width="3" height="-1"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Created by: Group 2 Isabel Laurenceau My Ling Nyguen Michelle Emamdie  " textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5x-Tn-Uub">
-                                <rect key="frame" x="197" y="417" width="206" height="140"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created by: Group 2 Isabel Laurenceau My Ling Nyguen Michelle Emamdie  " textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5x-Tn-Uub">
+                                <rect key="frame" x="197" y="284" width="206" height="140"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="206" id="rk2-xo-4Dn"/>
+                                    <constraint firstAttribute="width" constant="206" id="Ooy-em-FUc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="highlightedColor"/>
@@ -42,10 +46,16 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="O5x-Tn-Uub" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Jyr-Jf-gqz"/>
-                            <constraint firstItem="EEV-oi-sGF" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Loc-Wx-f6e"/>
-                            <constraint firstItem="EEV-oi-sGF" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="VTu-vT-IIe"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="O5x-Tn-Uub" secondAttribute="bottom" constant="43" id="oVO-4O-Q6z"/>
+                            <constraint firstItem="EEV-oi-sGF" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="5eL-yP-PYU"/>
+                            <constraint firstItem="O5x-Tn-Uub" firstAttribute="top" secondItem="R1D-IA-ADX" secondAttribute="bottom" constant="38" id="MjD-Jn-RBN"/>
+                            <constraint firstItem="O5x-Tn-Uub" firstAttribute="centerX" secondItem="R1D-IA-ADX" secondAttribute="centerX" id="Nba-GW-jfv"/>
+                            <constraint firstItem="EEV-oi-sGF" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="SOK-8L-rRz"/>
+                            <constraint firstAttribute="trailing" secondItem="EEV-oi-sGF" secondAttribute="trailing" id="ZA4-Ut-q9m"/>
+                            <constraint firstItem="R1D-IA-ADX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="99" id="gNg-jE-fdH"/>
+                            <constraint firstItem="R1D-IA-ADX" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="127" id="jrD-G9-Wra"/>
+                            <constraint firstItem="EEV-oi-sGF" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="lxE-rO-i2u"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="O5x-Tn-Uub" secondAttribute="bottom" constant="176" id="qB5-P9-6Zi"/>
+                            <constraint firstItem="O5x-Tn-Uub" firstAttribute="centerX" secondItem="EEV-oi-sGF" secondAttribute="centerX" id="zuS-Ye-Uz2"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -55,6 +65,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cardstack.jpeg" width="193" height="261"/>
+        <image name="cardstack.png" width="235" height="235"/>
     </resources>
 </document>
